--- a/app/src/main/res/layout/fragment_keranjang_detail.xml
+++ b/app/src/main/res/layout/fragment_keranjang_detail.xml
@@ -134,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/rubik_medium"
-                android:text="Deskripsi"
+                android:text="Deskripsi (opsional)"
                 android:textAllCaps="false"
                 android:textColor="@color/gray_600"
                 android:textSize="12sp"
@@ -148,7 +148,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/rubik_medium"
-                android:text="Judul"
+                android:text="Judul keranjang"
                 android:textColor="@color/gray_600"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@+id/gr_keranjang_detail"
@@ -161,6 +161,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:ems="10"
+                android:hint="Ex: Belanja bulanan, hadiah pernikahan..."
                 android:inputType="textPersonName"
                 android:saveEnabled="false"
                 android:textColor="@color/gray_800"
