--- a/app/src/main/res/layout/fragment_order_new.xml
+++ b/app/src/main/res/layout/fragment_order_new.xml
@@ -42,7 +42,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/rubik_medium"
-                android:text="Pesan"
+                android:text="Pesan (opsional)"
                 android:textColor="@color/gray_600"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@+id/ghe_order_new"
@@ -56,6 +56,7 @@
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:gravity="start|top"
+                android:hint="Pakai bubble wrap kak"
                 android:inputType="textMultiLine"
                 android:lineSpacingExtra="4sp"
                 android:textColor="@color/gray_700"
