--- a/app/src/main/res/layout/fragment_profil_testimoni.xml
+++ b/app/src/main/res/layout/fragment_profil_testimoni.xml
@@ -14,7 +14,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_profil_testimoni"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
