--- a/app/src/main/res/navigation/mobile_nav.xml
+++ b/app/src/main/res/navigation/mobile_nav.xml
@@ -101,6 +101,11 @@
             android:name="jumlah"
             app:argType="integer"
             android:defaultValue="-1" />
+        <argument
+            android:name="judul"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/keranjangFragment"
@@ -382,7 +387,9 @@
         tools:layout="@layout/fragment_order_konfirmasi">
         <action
             android:id="@+id/action_orderKonfirmasiFragment_to_orderDetailFragment"
-            app:destination="@id/orderDetailFragment" />
+            app:destination="@id/orderDetailFragment"
+            app:popUpTo="@id/orderDetailFragment"
+            app:popUpToInclusive="true" />
         <argument
             android:name="order_id"
             android:defaultValue="-1"
@@ -391,6 +398,11 @@
             android:name="payment_method_id"
             app:argType="integer"
             android:defaultValue="-1" />
+        <action
+            android:id="@+id/orderKonfirmasiFragment_to_nav_home"
+            app:destination="@id/nav_home"
+            app:popUpTo="@id/nav_home"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/postinganFragment"
