--- a/app/src/main/res/layout/fragment_form_profil_biodata.xml
+++ b/app/src/main/res/layout/fragment_form_profil_biodata.xml
@@ -111,6 +111,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:ems="10"
+                android:hint="yyyy-mm-dd"
                 android:inputType="date"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_form_profil_biodata_tgl_lahir_title"
